--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,46 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter & Dart
 .dart_tool/
+.packages
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
 .pub/
-/build/
+build/
+*.lock
 
-# Symbolication related
-app.*.symbols
+# IDEs
+.vscode/
+.idea/
+*.iml
 
-# Obfuscation related
+# Android
+android/.gradle/
+android/local.properties
+android/key.properties
+**/android/**/build/
+
+# iOS/macOS
+ios/Flutter/.last_build_id
+ios/Flutter/ephemeral/
+ios/Pods/
+ios/.generated/
+ios/**/xcuserdata/
+macos/Flutter/ephemeral/
+macos/Pods/
+macos/**/xcuserdata/
+
+# Windows/Linux
+windows/flutter/generated_*
+linux/flutter/generated_*
+
+# Web
+web/generated/
+
+# Outros
+*.log
+*.swp
+.DS_Store
+coverage/
+
+# Obfuscation & symbol files
 app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+app.*.symbols
