--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.8.1
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
