added bloc to login and signup page, and firebase error handling

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   google_sign_in: ^6.3.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
